mono-backend/src/main/resources/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: m-caj-mono-backend
spec:
  host: m-caj-mono-backend-${STUDENT_ID}.${BASE_DOMAIN}
  to:
    kind: Service
    name: m-caj-mono-backend
    weight: 100
  port:
    targetPort: 8080
